# OSMediaMote

./: Cargo.toml  README.md
AndroidClient/: README.md
AndroidClient/OSMediaMote/: settings.gradle.kts
AndroidClient/OSMediaMote/app/: build.gradle.kts
AndroidClient/OSMediaMote/app/src/androidTest/java/com/xdmpx/osmediamote/: ExampleInstrumentedTest.kt
AndroidClient/OSMediaMote/app/src/main/: AndroidManifest.xml
AndroidClient/OSMediaMote/app/src/main/java/com/xdmpx/osmediamote/: MainActivity.kt  OSMediaMote.kt
AndroidClient/OSMediaMote/app/src/main/java/com/xdmpx/osmediamote/settings/: Settings.kt  SettingsViewModel.kt
AndroidClient/OSMediaMote/app/src/main/java/com/xdmpx/osmediamote/ui/: About.kt  Main.kt  MediaControlScreen.kt  Settings.kt
AndroidClient/OSMediaMote/app/src/main/java/com/xdmpx/osmediamote/utils/: MediaControlRequester.kt  Utils.kt  VolleyRequestQueue.kt
AndroidClient/OSMediaMote/app/src/main/res/drawable/: rounded_code_24.xml  rounded_license_24.xml  rounded_music_video_24.xml  rounded_skip_next_24.xml  rounded_skip_previous_24.xml  rounded_visibility_lock_24.xml  sharp_menu_24.xml
AndroidClient/OSMediaMote/app/src/main/res/values/: strings.xml  themes.xml
AndroidClient/OSMediaMote/app/src/test/java/com/xdmpx/osmediamote/: ExampleUnitTest.kt
AndroidClient/OSMediaMote/gradle/: libs.versions.toml
AndroidClient/OSMediaMote/gradle/wrapper/: gradle-wrapper.properties
osmediamote-cli/: Cargo.toml  README.md
osmediamote-cli/src/: lib.rs  main.rs
src/: lib.rs  main.rs  media_controller.rs  media_controller_win.rs
(+3 files in other folders)
