[package]
name = "os_mediamote"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"

[target.'cfg(not(target_os="windows"))'.dependencies]
mpris = "2.0.1"

[target.'cfg(target_os="windows")'.dependencies]
windows = { version = "0.59.0", features = ["Media_Control"] }
futures = "0.3"
